<resources>
    <string name="app_name">Jeep Swap Shop</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="et_title">Title</string>
    <string name="et_make">Make</string>
    <string name="et_model">Model</string>
    <string name="et_mileage">Mileage</string>
    <string name="et_price">Price</string>
    <string name="et_email">Email</string>
    <string name="et_phone">Phone</string>
    <string name="et_street">Street</string>
    <string name="et_city">City</string>
    <string name="et_state">State</string>
    <string name="et_zip">Zip</string>
    <string name="et_year">Year</string>
    <string name="et_partamount">Part Amount</string>
</resources>
